# geko_bayopt

./: .gitignore  AGENTS.md  README.md  pyfluent_watchdog.err  pyproject.toml  requirements.txt  test_file.py
configs/: periodic_hills_2800.json  periodic_hills_csep.json  periodic_hills_csep_pmdb.json  periodic_hills_csep_pmdb_v2.json
data/: README.md
data/geometry/: Periodic_Hill_10_90_3035.pmdb  Periodic_Hill_Re2800.dsco  Periodic_Hill_Re2800.fmd  periodic_hill_2d_alpha_1.0.fmd
data/geometry/perhill/: Periodic_Hill_05_10071_2024.pmdb  Periodic_Hill_05_10071_3036.pmdb  Periodic_Hill_05_10071_4048.pmdb  Periodic_Hill_05_4071_2024.pmdb  Periodic_Hill_05_4071_3036.pmdb  Periodic_Hill_05_4071_4048.pmdb  Periodic_Hill_05_7071_2024.pmdb  Periodic_Hill_05_7071_3036.pmdb  Periodic_Hill_05_7071_4048.pmdb  Periodic_Hill_075_80355_3036.pmdb  Periodic_Hill_10_120_2024.pmdb  Periodic_Hill_10_120_3036.fmd  Periodic_Hill_10_120_3036.pmdb  Periodic_Hill_10_120_4048.pmdb  Periodic_Hill_10_60_2024.pmdb  Periodic_Hill_10_60_3036.pmdb  Periodic_Hill_10_60_4048.pmdb  Periodic_Hill_10_90_2024.pmdb  Periodic_Hill_10_90_3036.fmd  Periodic_Hill_10_90_3036.pmdb  Periodic_Hill_10_90_3036.scdocx  Periodic_Hill_10_90_4048.pmdb  Periodic_Hill_125_99645_3036.pmdb  Periodic_Hill_15_10929_2024.pmdb  Periodic_Hill_15_10929_3036.pmdb  Periodic_Hill_15_10929_4048.pmdb  Periodic_Hill_15_13929_2024.pmdb  Periodic_Hill_15_13929_3036.pmdb  Periodic_Hill_15_13929_4048.pmdb  Periodic_Hill_15_7929_2024.pmdb  (+3 more)
scripts/: plot_csep_vs_loss.py
src/geko_bayesopt/: __init__.py  cli.py  config.py  experiment.py  optimizer.py  store.py  types.py
tests/: objective_function_plot_test.py  profiles_plot.py  test_BayOpt.py  test_dns_data_scales.py  test_field_error.py  test_plot.py
(+47 files in other folders)
